# openraft

./: .gitignore  .mergify.yml  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO-PRIORITY-LIST.md  architecture.html  book.toml  build.rs  change-log.md  clippy.toml  cluster-controls.html  cluster-formation.html  comprehensive-test-framework-task.md  delete_log.html  derived-from-async-raft.md  dynamic-membership.html  effective-membership.html  extended-membership.html  faq.html  feature-flags.html  fixes.md  get-to-it.html  getting-started.html  heartbeat.html  index.html  internal.html  log-data-layout.html  metrics.html  network.html  node-lifecycle.html  obsolete-design.html  overview.html  print.html  putting-it-all-together.html  (+14 more)
async-raft/: Cargo.toml
async-raft/_tests/: client_writes.rs  singlenode.rs
async-raft/src/: config.rs  defensive.rs  error.rs  lib.rs  membership_test.rs  metrics.rs  metrics_wait_test.rs  network.rs  raft.rs  raft_types.rs  storage.rs  storage_error.rs  store_ext.rs  store_wrapper.rs  summary.rs
async-raft/tests/: add_remove_voter.rs  api_install_snapshot.rs  append_conflicts.rs  append_inconsistent_log.rs  append_updates_membership.rs  clean_applied_logs.rs  client_current_leader.rs  client_reads.rs  client_writes.rs  compaction.rs  concurrent_write_and_add_non_voter.rs  conflict_with_empty_entries.rs  current_leader.rs  dynamic_membership.rs  elect_compare_last_log.rs  initialization.rs  lagging_network_write.rs  leader_metrics.rs  members.rs  members_012_to_234.rs  members_0_to_012.rs  members_leader_fix_partial.rs  members_stop_repl_to_removed.rs  metrics_state_machine_consistency.rs  metrics_wait.rs  non_voter_add.rs  non_voter_restart.rs  replication_1_voter_to_isolated_non_voter.rs  shutdown.rs  singlenode.rs  snapshot_chunk_size.rs  snapshot_ge_half_threshold.rs  snapshot_line_rate_to_snapshot.rs  snapshot_overrides_membership.rs  snapshot_uses_prev_snap_membership.rs  state_machien_apply_membership.rs  stepdown.rs  total_order_apply.rs
benchmarks/minimal/: Cargo.toml  README.md
cluster_benchmark/: Cargo.toml  README.md
cluster_benchmark/src/: store.rs
example-raft-kv/: .gitignore  Cargo.toml  README.md  test-cluster-and-dump-flamegraph.sh  test-cluster.sh
example-raft-kv/src/: app.rs  client.rs  lib.rs  network.rs  rpc_handlers.rs  store.rs
examples/mem-log/: Cargo.toml  README.md
examples/memstore/: Cargo.toml
examples/multi-raft-kv/: Cargo.toml  README.md
examples/multi-raft-sharding/: Cargo.toml  README.md
examples/network-v1-http/: Cargo.toml  README.md
examples/network-v2-http/: Cargo.toml  README.md
examples/raft-kv-fjall/: Cargo.toml  README.md  test-cluster.sh
examples/raft-kv-memstore-grpc/: Cargo.toml  README.md  build.rs  test-cluster.sh
examples/raft-kv-memstore-opendal-snapshot-data/: Cargo.toml  README.md
legacy/: Cargo.toml  README.md
legacy/src/: lib.rs
macros/: Cargo.toml  README.md
macros/src/: expand.rs  lib.rs  lib_readme.md  since.rs  utils.rs
macros/tests/: test_default_types.rs  test_expand.rs  test_since.rs
memstore/: Cargo.toml  README.md
memstore/src/: lib.rs  test.rs
metrics-otel/: Cargo.toml  TODO.md
metrics-otel/src/: lib.rs
multiraft/: Cargo.toml  README.md
multiraft/src/: lib.rs  network.rs
network-v1/: Cargo.toml  README.md
network-v1/src/: adapt_v1_to_v2.rs  chunked.rs  chunked_raft.rs  lib.rs  network.rs  raft.rs  receiver.rs  sender.rs  streaming.rs
openraft/: .gitignore  Cargo.toml  snapshot_le_last_applied.rs
openraft/openraft-proto/: Cargo.toml  build.rs
openraft/scripts/: check-missing-docs.sh
openraft/src/: async_runtime.rs  change_members.rs  config.rs  config_test.rs  defensive.rs  deprecated_features.rs  display_ext.rs  engine.rs  entry.rs  error.rs  extensions.rs  feature_rkyv_test.rs  feature_serde_test.rs  foo.rs  instant.rs  internal_server_state.rs  leader_metrics.rs  leader_metrics_test.rs  lib.rs  lib_readme.md  log_id_range.rs  membership_test.rs  metrics.rs  metrics_wait_test.rs  network.rs  node.rs  potime.rs  raft.rs  raft_compat.rs  raft_state.rs  raft_state_test.rs  raft_types.rs  replication_metrics.rs  stats.rs  storage.rs  storage_error.rs  storage_helper.rs  store_ext.rs  store_wrapper.rs  summary.rs  (+3 more)
openraft/tests/: add_remove_voter.rs  api_install_snapshot.rs  append_conflicts.rs  append_inconsistent_log.rs  append_prev_is_purged.rs  append_updates_membership.rs  clean_applied_logs.rs  client_reads.rs  client_writes.rs  compaction.rs  concurrent_write_and_add_learner.rs  concurrent_write_and_add_non_voter.rs  conflict_with_empty_entries.rs  current_leader.rs  elect_compare_last_log.rs  initialization.rs  lagging_network_write.rs  leader_metrics.rs  measure_error_size.rs  metrics_state_machine_consistency.rs  metrics_wait.rs  replication_1_voter_to_isolated_learner.rs  replication_1_voter_to_isolated_non_voter.rs  shutdown.rs  singlenode.rs  snapshot_chunk_size.rs  snapshot_ge_half_threshold.rs  snapshot_line_rate_to_snapshot.rs  snapshot_overrides_membership.rs  snapshot_uses_prev_snap_membership.rs  state_machien_apply_membership.rs  stepdown.rs  total_order_apply.rs
rocksstore/: Cargo.toml  README.md
rocksstore-compat07/: Cargo.toml  README.md
rocksstore-compat07/src/: compatibility_test.rs  lib.rs  test.rs
rocksstore/src/: lib.rs  test.rs
rt/: Cargo.toml
rt-compio/: Cargo.toml  README.md
rt-compio/src/: lib.rs  mpsc.rs  mpsc_unbounded.rs  mutex.rs  oneshot.rs  watch.rs
rt-monoio/: Cargo.toml  README.md
rt-monoio/src/: instant.rs  lib.rs  mpsc.rs  mutex.rs  oneshot.rs  watch.rs
rt-tokio/: Cargo.toml  README.md
rt-tokio/src/: instant.rs  lib.rs  mpsc.rs  mutex.rs  oneshot.rs  watch.rs
rt/src/: async_runtime.rs  deterministic_rng.rs  instant.rs  lib.rs  mutex.rs  task_local.rs  testing.rs
sledstore/: Cargo.toml  README.md
sledstore/src/: lib.rs  test.rs
tests/: Cargo.toml  client_writes.rs  clustering.rs  dynamic_membership.rs  initialization.rs  singlenode.rs  snapshotting.rs
tests-turmoil/: Cargo.toml  README.md
(+1509 files in other folders)
