[workspace.package]
version = "0.9.0"
edition = "2021"
authors = [
    "Databend Authors <opensource@datafuselabs.com>",
    "Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "Advanced Raft consensus"
documentation = "https://docs.rs/openraft"
homepage = "https://github.com/datafuselabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/datafuselabs/openraft"


[workspace.dependencies]
anyerror = { version = "0.1.10" }
anyhow = "1.0.63"
async-entry = "0.3.1"
async-trait = "0.1.36"
byte-unit = "4.0.12"
bytes = "1.0"
clap = { version = "4.1.11", features = ["derive", "env"] }
derive_more = { version="0.99.9" }
futures = "0.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
pretty_assertions = "1.0.0"
rand = "0.8"
serde = { version="1.0.114", features=["derive", "rc"]}
serde_json = "1.0.57"
tempfile = { version = "3.4.0" }
thiserror = "1.0.49"
tokio = { version="1.8", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.40" }
tracing-appender = "0.2.0"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.3",  features=["env-filter"] }
validit = { version = "0.2.2" }

[workspace]

resolver = "2"

members = [
    "openraft",
    "memstore",
    "macros",
    "tests",
    "rocksstore",
    "rocksstore-compat07",
    "sledstore"]
exclude = [
    "cluster_benchmark",
    "stores/rocksstore-v2",
    "examples/raft-kv-memstore",
    "examples/raft-kv-rocksdb",
]
