[workspace.package]
version = "0.10.0"
edition = "2024"
authors = [
    "Databend Authors <opensource@datafuselabs.com>",
    "Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "Advanced Raft consensus"
documentation = "https://docs.rs/openraft"
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"


[workspace.dependencies]
anyerror           = { version = "0.1.10" }
anyhow             = { version = "1.0.63" }
async-entry        = { version = "0.3.1" }
byte-unit          = { version = "5.1.4" }
bytes              = { version = "1.0" }
chrono             = { version = "0.4" }
clap               = { version = "4.1.11", features = ["derive", "env"] }
derive_more        = { version = "1.0", features = ["std", "from", "try_into", "display"] }
futures            = { version = "0.3" }
lazy_static        = { version = "1.4.0" }
maplit             = { version = "1.0.2" }
pretty_assertions  = { version = "1.0.0" }
proc-macro2        = { version = "1.0" }
quote              = { version = "1.0" }
rand               = { version = "0.9" }
semver             = { version = "1.0.14" }
serde              = { version = "1.0.114", features = ["derive", "rc"] }
serde_json         = { version = "1.0.57" }
syn                = { version = "2.0" }
tempfile           = { version = "3.4.0" }
test-harness       = { version = "0.3.0" }
thiserror          = { version = "1.0.49" }
tokio              = { version = "1.22", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing            = { version = "0.1.40" }
tracing-appender   = { version = "0.2.0" }
tracing-futures    = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
validit            = { version = "0.2.2" }

[workspace]

resolver = "3"

members = [
    "openraft",
    "macros",
    "tests",
    "stores/memstore",
]
exclude = [
    "cluster_benchmark",

    "examples/client-http",
    "examples/network-v1-http",

    "examples/mem-log",
    "examples/rocksstore",

    "examples/raft-kv-memstore",
    "examples/raft-kv-memstore-grpc",
    "examples/raft-kv-memstore-singlethreaded",
    "examples/raft-kv-memstore-network-v2",
    "examples/raft-kv-memstore-opendal-snapshot-data",
    "examples/raft-kv-rocksdb",

    "rt-monoio",
    "rt-compio"
]
