[package]
name = "async-raft"
version = "0.5.5"
edition = "2018"
authors = ["Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An async implementation of the Raft distributed consensus protocol."
documentation = "https://docs.rs/async-raft"
homepage = "https://github.com/async-raft/async-raft"
keywords = ["raft", "consensus", "data-storage"]
license = "MIT/Apache-2.0"
repository = "https://github.com/async-raft/async-raft"
readme = "../README.md"

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.36"
bytes = "0.5"
derive_more = { version="0.99.9", default-features=false, features=["from"] }
futures = "0.3"
log = "0.4"
rand = "0.7"
serde = { version="1", features=["derive"] }
thiserror = "1.0.20"
tokio = { version="0.2", default-features=false, features=["fs", "io-util", "macros", "rt-core", "rt-threaded", "stream", "sync", "time"] }
tracing = "0.1"
tracing-futures = { version="0.2.4", features=["tokio"] }

[dev-dependencies]
maplit = "1.0.2"
memstore = { version="0.1.0", path="../memstore" }
tracing-subscriber = "0.2.10"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
