[package]
name = "openraft-legacy"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description = "Legacy compatibility layer for deprecated Openraft APIs"
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openraft = { path = "../openraft", version = "0.10.0-alpha.14", default-features = false }
openraft-macros = { path = "../macros", version = "0.10.0-alpha.14" }

futures = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
tracing = { workspace = true }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
