[package]
name = "macros"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[lib]
proc-macro = true

[features]

# Do not use `async_trait` and do not add `Send` bounds.
singlethreaded = []
