[package]
name = "openraft-macros"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[lib]
proc-macro = true

[dependencies]
chrono      = { workspace = true }
proc-macro2 = { workspace = true }
quote       = { workspace = true }
semver      = { workspace = true }
syn         = { workspace = true, features = ["full", "extra-traits"] }


[dev-dependencies]
macrotest = { version = "1" }
trybuild  = { version = "1.0" }


[features]

# Do not add `Send` bounds.
singlethreaded = []
