[package]
name = "openraft-memstore"
description = "An in-memory implementation of the `openraft::RaftStorage` trait."
documentation = "https://docs.rs/openraft-memstore"
readme = "README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }


[dependencies]
anyerror = { version = "0.1.6", features = ["anyhow"]}
async-trait = "0.1.36"
serde = { version="1.0.114", features=["derive"] }
serde_json = "1.0.57"
tokio = { version="1.0", default-features=false, features=["sync"] }
tracing = "0.1.29"
tracing-futures = "0.2.4"

openraft = { path= "../openraft", version="0.7.4" }

[dev-dependencies]
anyhow = "1.0.63"
maplit = "1.0.2"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
