[package]
name = "openraft-memstore"
description = "A in-memory implementation of the `openraft::RaftStorage` trait."
documentation = "https://docs.rs/openraft-memstore"
readme = "README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[dependencies]
openraft = { path= "../openraft", version = "0.8.2", features=["serde"] }

serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
maplit      = { workspace = true }

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
