[package]
name = "openraft-multi"
description = "Multi-Raft adapters for connection sharing across Raft groups"
documentation = "https://docs.rs/openraft-multiraft"
readme = "README.md"
version = "0.10.0"
edition = "2021"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["network", "asynchronous", "data-structures"]
homepage = "https://github.com/databendlabs/openraft"
keywords = ["consensus", "raft", "multi-raft"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
openraft  = { path = "../openraft", version = "0.10.0", default-features = false }
anyerror  = { version = "0.1" }

