[package]
name = "openraft"
readme = "../README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }


[dependencies]
openraft-macros = { path = "../macros", version = "0.10.0" }

anyerror        = { workspace = true }
anyhow          = { workspace = true, optional = true }
byte-unit       = { workspace = true }
chrono          = { workspace = true }
clap            = { workspace = true }
derive_more     = { workspace = true }
futures         = { workspace = true }
maplit          = { workspace = true }
rand            = { workspace = true }
serde           = { workspace = true, optional = true }
serde_json      = { workspace = true, optional = true }
thiserror       = { workspace = true }
tokio           = { workspace = true, optional = true }
tracing         = { workspace = true }
tracing-futures = { workspace = true }
validit         = { workspace = true }


[dev-dependencies]
anyhow            = { workspace = true }
async-entry       = { workspace = true }
pretty_assertions = { workspace = true }
serde_json        = { workspace = true }


[features]
default = ["tokio-rt", "adapt-network-v1"]

# Enable the default Tokio runtime
tokio-rt = ["dep:tokio"]

# Enables benchmarks in unittest.
#
# Benchmark in openraft depends on the unstable feature `test` thus it cannot be used with stable rust.
# In order to run the benchmark with stable toolchain,
# the unstable features have to be enabled explicitly with environment variable `RUSTC_BOOTSTRAP=1`.
bench = []

# Enable backtrace when generating an error.
# Stable rust does not support backtrace.
bt  = ["anyerror/backtrace", "anyhow/backtrace"]

# Add serde::Serialize and serde:Deserialize bound to data types.
# If you'd like to use `serde` to serialize messages.
serde = ["dep:serde"]

# This feature is removed.
# Use `openraft::impls::leader_id_std::Leader` for `RaftTypeConfig`
# to enable standard Raft leader election.
single-term-leader = []

# Enable this feature to use `openraft::alias::*` type shortcuts.
# The type shortcuts are not stable and may be changed in the future.
type-alias = []

# Provide basic compatible types
compat = []

# Enable this feature to automatically implement `RaftNetworkV2` for `RaftNetwork` implementations.
# This helps to migrate to `RaftNetworkV2` without changing your existing implementation.
# However, if this is enabled, the blanket implementation of `RaftNetworkV2` may result in
# conflicting if the application tries to implement `RaftNetworkV2<T>` where `T`
# is a generic type. For example a conflict in application with this feature on:
# ```
# pub trait RaftTypeConfigExt: openraft::RaftTypeConfig {}
# pub struct NetworkConnection2 {}
# impl<T> RaftNetworkV2<T> for NetworkConnection2
# where T: RaftTypeConfigExt + Send + Sync + 'static {/*...*/}
# ```
adapt-network-v1 = []

# Disallows applications to share a raft instance with multiple threads.
singlethreaded = ["openraft-macros/singlethreaded"]


# Permit the follower's log to roll back to an earlier state without causing the
# leader to panic.
#
# Although log state reversion is typically seen as a bug, enabling it can be
# useful for testing or other special scenarios.
# For instance, in an even number nodes cluster, erasing a node's data and then
# rebooting it(log reverts to empty) will not result in data loss.
#
# This feature is removed since `0.10.0`. Use `Config::allow_log_reversion` instead.
loosen-follower-log-revert = []


# Enables "log" feature in `tracing` crate, to let tracing events emit log
# record.
# See: https://docs.rs/tracing/latest/tracing/#emitting-log-records
tracing-log = [ "tracing/log" ]

[package.metadata.docs.rs]

# Enable these feature flags to show all types/mods,
# including the feature enabled ones on docs.rs
features = [
    "bt",
    "compat",
    "serde",
    "tracing-log",
]

no-default-features = false

# Do not use this to enable all features:
# "singlethreaded" makes `Raft<C>` a `!Send`, which confuses users.
# all-features = true

# Disabled appearance order. It produce multiple `Trait`, `Struct` sections in a doc page.
#
# Sort modules by appearance order for crate `docs`.
# https://doc.rust-lang.org/rustdoc/unstable-features.html#--sort-modules-by-appearance-control-how-items-on-module-pages-are-sorted
# rustdoc-args = ["-Z", "unstable-options", "--sort-modules-by-appearance"]
