[package]
name = "openraft"
readme = "../README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }


[dependencies]
openraft-rt = { path = "../rt", version = "0.10.0" }
openraft-rt-tokio = { path = "../rt-tokio", version = "0.10.0", optional = true }
openraft-macros = { path = "../macros", version = "0.10.0" }

anyerror        = { workspace = true }
anyhow          = { workspace = true, optional = true }
byte-unit       = { workspace = true }
chrono          = { workspace = true }
clap            = { workspace = true }
derive_more     = { workspace = true }
futures-util    = { workspace = true }
maplit          = { workspace = true }
rand            = { workspace = true }
serde           = { workspace = true, optional = true }
serde_json      = { workspace = true, optional = true }
tabled          = { workspace = true, optional = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
tracing-futures = { workspace = true }
validit         = { workspace = true }


[dev-dependencies]
anyhow            = { workspace = true }
openraft-rt-tokio = { path = "../rt-tokio", version = "0.10.0" }
pretty_assertions = { workspace = true }
serde_json        = { workspace = true }


[features]
default = ["tokio-rt"]

# Enable the default Tokio runtime
tokio-rt = ["dep:openraft-rt-tokio"]

# Enables benchmarks in unittest.
#
# Benchmark in openraft depends on the unstable feature `test` thus it cannot be used with stable rust.
# In order to run the benchmark with stable toolchain,
# the unstable features have to be enabled explicitly with environment variable `RUSTC_BOOTSTRAP=1`.
bench = []

# Enable backtrace when generating an error.
# Stable rust does not support backtrace.
bt  = ["anyerror/backtrace", "anyhow/backtrace"]

# Add serde::Serialize and serde:Deserialize bound to data types.
# If you'd like to use `serde` to serialize messages.
serde = ["dep:serde"]

# DEPRECATED: This feature is removed since 0.10.0.
# Migration: Use `openraft::impls::leader_id_std::LeaderId` for `RaftTypeConfig::LeaderId`
# to enable standard Raft leader election.
single-term-leader = []

# Enable this feature to use `openraft::alias::*` type shortcuts.
# The type shortcuts are not stable and may be changed in the future.
type-alias = []

# Provide basic compatible types
compat = []

# DEPRECATED: This feature is removed since 0.10.0.
#
# Previously: This feature allowed applications to keep using the legacy
# `RaftNetwork` (v1) trait by automatically converting it to `RaftNetworkV2`
# via a blanket implementation.
#
# Migration: Use the `openraft_legacy` crate instead, which provides the same
# functionality:
# - Implement `openraft_legacy::network_v1::RaftNetwork`
# - Use `RaftNetwork::into_v2()` to wrap it as `RaftNetworkV2`
adapt-network-v1 = []

# Disallows applications to share a raft instance with multiple threads.
single-threaded = ["openraft-rt/single-threaded", "openraft-rt-tokio?/single-threaded", "openraft-macros/single-threaded"]

# DEPRECATED: This feature is removed since 0.10.0.
# Migration: Use `single-threaded` feature instead.
# This feature triggers a compile-time error with migration instructions.
singlethreaded = []


# DEPRECATED: This feature is removed since 0.10.0.
# Migration: Use `Config::allow_log_reversion` instead.
#
# Previously: Permit the follower's log to roll back to an earlier state without
# causing the leader to panic.
loosen-follower-log-revert = []


# Enables "log" feature in `tracing` crate, to let tracing events emit log
# record.
# See: https://docs.rs/tracing/latest/tracing/#emitting-log-records
tracing-log = [ "tracing/log" ]

# Expose runtime statistics types (`RuntimeStats`, `SharedRuntimeState`, `Histogram`)
# and add `Raft::runtime_stats()` method for accessing runtime statistics.
runtime-stats = ["dep:tabled"]

[package.metadata.docs.rs]

# Enable these feature flags to show all types/mods,
# including the feature enabled ones on docs.rs
features = [
    "bt",
    "compat",
    "serde",
    "tracing-log",
]

no-default-features = false

# Do not use this to enable all features:
# "single-threaded" makes `Raft<C>` a `!Send`, which confuses users.
# all-features = true

# Disabled appearance order. It produce multiple `Trait`, `Struct` sections in a doc page.
#
# Sort modules by appearance order for crate `docs`.
# https://doc.rust-lang.org/rustdoc/unstable-features.html#--sort-modules-by-appearance-control-how-items-on-module-pages-are-sorted
# rustdoc-args = ["-Z", "unstable-options", "--sort-modules-by-appearance"]
