[package]
name = "openraft-rocksstore-compat07"
version = "0.1.0"
edition = "2021"

[dependencies]
openraft = { path = "../openraft", package = "openraft", features = ["compat-07"] }

async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
byteorder = "1.4.3"
rocksdb = "0.20.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tracing = "0.1.29"

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { version = "0.1.36" }
tempdir = { version = "0.3.7" }
tokio = { version = "1.25.0" }

rocksstore07 = { package = "openraft-rocksstore", version = "0.7.4" }

