[package]
name = "openraft-rocksstore-compat07"
description = "A example v07 compatible implementation of the `openraft::RaftStorage` trait."
documentation = "https://docs.rs/openraft-rocksstore-copmat07"
readme = "README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }


[dependencies]
openraft = { path = "../openraft", package = "openraft", version = "0.9.0", features = ["compat-07", "bt"] }

async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
byteorder = "1.4.3"
rocksdb = "0.20.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tracing = "0.1.29"

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { version = "0.1.36" }
tempfile = { version = "3.4.0" }
tokio = { version = "1.25.0" }

rocksstore07 = { package = "openraft-rocksstore", version = "0.7.4" }

[package.metadata.docs.rs]
all-features = true
