[package]
name = "rocksstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openraft = { path = "../openraft", features = ["serde"] }

rocksdb = "0.18.0"
byteorder = "1.4.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tracing = "0.1.29"
tracing-futures = "0.2.4"

[dev-dependencies]
tempdir = "*"
async-trait = "*"
