[package]
name = "openraft-rocksstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openraft = { path = "../openraft", features = ["serde"] }

rocksdb = "0.20.1"
byteorder = "1.4.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tracing = "0.1.29"

[dev-dependencies]
async-trait = { version = "0.1.36" }
tempdir = { version = "0.3.7" }
